--- a/project.config.json
+++ b/project.config.json
@@ -85,6 +85,20 @@
 					"id": -1,
 					"name": "page/toBeConfirm/toBeConfirm",
 					"pathName": "page/toBeConfirm/toBeConfirm",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "page/toBeConfirmOrderDetail/toBeConfirmOrderDetail",
+					"pathName": "page/toBeConfirmOrderDetail/toBeConfirmOrderDetail",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "page/orderDetail/orderDetail",
+					"pathName": "page/orderDetail/orderDetail",
 					"scene": null
 				}
 			]
