--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
         "selectedIconPath": "imgs/tabBar/message@selected.png"
       },
       {
-        "pagePath": "page/my/index",
+        "pagePath": "page/my/pages/login/login",
         "text": "我的",
         "iconPath": "imgs/tabBar/my.png",
         "selectedIconPath": "imgs/tabBar/my@selected.png"
