--- a/project.config.json
+++ b/project.config.json
@@ -142,6 +142,14 @@
 					"id": -1,
 					"name": "page/test/test",
 					"pathName": "page/test/test",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail",
+					"pathName": "page/home/pages/all-work-inspection-Detail/all-work-inspection-Detail",
+					"query": "",
 					"scene": null
 				}
 			]
