--- a/project.config.json
+++ b/project.config.json
@@ -165,6 +165,12 @@
 					"pathName": "page/home/pages/terminalUser/toBeConfirm/toBeConfirm",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "page/home/pages/terminalUser/toBeConfirm/toBeConfirm",
+					"pathName": "page/home/pages/terminalUser/toBeConfirm/toBeConfirm",
+					"scene": null
 				}
 			]
 		}
