--- a/project.config.json
+++ b/project.config.json
@@ -79,6 +79,21 @@
 					"id": -1,
 					"name": "page/home/pages/networkDetail/networkDetail",
 					"pathName": "page/home/pages/networkDetail/networkDetail",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "page/home/pages/uploadImage/uploadImage",
+					"pathName": "page/home/pages/uploadImage/uploadImage",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "page/home/pages/terminalUser/inspection/inspection",
+					"pathName": "page/home/pages/terminalUser/inspection/inspection",
+					"query": "",
 					"scene": null
 				}
 			]
